# typing

./: .gitignore  CMakeLists.txt  README.md
include/: file_utils.hpp  phrase.hpp  speed_test.hpp  term.hpp
src/: file_utils.cpp  main.cpp  phrase.cpp  speed_test.cpp  term.cpp
words/: keybr  wordlist
